# travel-platform

./: .env.backup.20260107_170551  .env.test  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.fixed  Dockerfile.works  LICENSE  MIGRATION_INFO.txt  README.md  alembic.ini  docker-compose.yml  generate_keys.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run_bot.py  test_database_complete.py  test_simple.py  verify_clean.py  verify_final.py  verify_setup.py
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_create_users_table.py
src/: __init__.py  main.py
src/api/: dependencies.py  middleware.py
src/api/v1/: router.py
src/api/v1/endpoints/: auth.py  bookings.py  travel.py  users.py
src/bot/: __init__.py  bot.py  config.py  env_loader.py  instance.py  setup.py  webhook.py
src/bot/formatters/: flights.
src/bot/handlers/: __init__.py  commands.py  conversations.py  messages.py
src/core/: __init__.py  exceptions.py  logging.py  types.py
src/core/config/: __init__.py  constants.py  secrets.py  settings.py  validators.py
src/database/: __init__.py  base.py  connection.py  redis_client.py  session.py
src/database/models/: base.py  flight.py  hotel.py  payment.py  session.py  user.py
src/schemas/: user.py
src/travel_platform/utils/: __init__.py  cache.py  currency.py  logger.py
src/utils/: __init__.py  cache.py  currency.py  currency_simple.py  date_helpers.py  logger.py  security.py  validators.py
